<resources>

    <string name="app_name">TabBarTutorial</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="barimage">BarImage</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="type">Type:</string>
    <string name="take_out">Take-Out</string>
    <string name="sit_down">Sit-Down</string>
    <string name="delivery">Delivery</string>
    <string name="name_label">Name:</string>
    <string name="address_label">Address:</string>
    <string name="type_label">Type:</string>
    <string name="save">Save</string>

</resources>