<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:shrinkColumns="1"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/name_label" />
        <EditText
            android:id="@+id/name"
            android:inputType="text" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/address_label" />
        <EditText
            android:id="@+id/addr"
            android:inputType="text" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/type_label" />
        <RadioGroup
            android:id="@+id/types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/takeout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/take_out" />

            <RadioButton
                android:id="@+id/sitdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sit_down" />

            <RadioButton
                android:id="@+id/delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery" />
        </RadioGroup>
    </TableRow>
    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</TableLayout>